--- a/example-microframe-order/example-microframe-order-facade/pom.xml
+++ b/example-microframe-order/example-microframe-order-facade/pom.xml
@@ -18,6 +18,13 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+	</dependencies>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
