添加common通用工具包说明

--- a/example-microframe-common/pom.xml
+++ b/example-microframe-common/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>example-microframe-common</name>
-	<description>常用工具类</description>
+	<description>通用工具类</description>
 
 
 	<properties>
