--- a/example-parent/.gitignore
+++ b/example-parent/.gitignore
@@ -1,4 +1,5 @@
-target/
+/target/
+*/target/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -11,6 +12,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+*.idea
 .idea
 *.iws
 *.iml
