--- a/example-order/order-service/pom.xml
+++ b/example-order/order-service/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example.microframe</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>order-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -12,8 +12,8 @@
 	<description>订单服务service</description>
 
 	<parent>
-		<groupId>com.example.microframe</groupId>
-		<artifactId>example-microframe-order</artifactId>
+		<groupId>com.example</groupId>
+		<artifactId>example-order</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
