--- a/example-base/pom.xml
+++ b/example-base/pom.xml
@@ -9,7 +9,13 @@
 	<packaging>pom</packaging>
 
 	<name>example-base</name>
-	<description>微服务的base工程</description>
+	<description>微服务的base工程，所有服务都要依赖</description>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.6.RELEASE</version>
+	</parent>
 
 	<properties>
 		<start-class>com.xx.webapps.api.main.WebappsApiBidMain</start-class> <!--解决打包时找不到main的问题-->
@@ -25,7 +31,9 @@
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
+			<!-- java编译插件 -->
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -35,6 +43,22 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+			<!-- 打包源代码插件 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -68,6 +92,14 @@
 				<enabled>false</enabled>
 				<updatePolicy>always</updatePolicy>
 			</releases>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 	</repositories>
 	<distributionManagement>
